--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="info">
             <h1 class="title">Adidas ZX</h1>
             <h3>Future Ready! Trainers with wrapped boost. Exceptional Comfort.</h3>
-            <div class="size">
+            <div class="sizes">
                 <button>9.5</button>
                 <buttton>10</buttton>
                 <button class="active">10.5</button>
