added assessets folder and gif to readme file

--- a/index.html
+++ b/index.html
@@ -9,29 +9,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
-<div class="container">
-    <div class="card">
-        <div class="sneaker">
-            <img src="./adidas.png" alt="adidas sneaker">
-        </div>
-        <div class="info">
-            <h1 class="title">Adidas ZX</h1>
-            <h3>Future Ready! Trainers with wrapped boost. Exceptional Comfort.</h3>
-            <div class="sizes">
-                <button>9.5</button>
-                <buttton>10</buttton>
-                <button class="active">10.5</button>
-                <button>11</button>
+    <div class="container">
+        <div class="card">
+            <div class="sneaker">
+                <div class="circle"></div>
+                <img src="./assets/adidas.png" alt="adidas sneaker">
             </div>
-<div class="purchase">
-    <button>Purchase</button>
-</div>
+            <div class="info">
+                <h1 class="title">Adidas ZX</h1>
+                <h3>Future Ready! Trainers with wrapped boost. Exceptional Comfort.</h3>
+                <div class="sizes">
+                    <button>9.5</button>
+                    <buttton>10</buttton>
+                    <button class="active">10.5</button>
+                    <button>11</button>
+                </div>
+                <div class="purchase">
+                    <button>Purchase</button>
+                </div>
+            </div>
         </div>
     </div>
-</div>
     <script src="./app.js"></script>
 </body>
-
 </html>
